--- a/exercicios/aula07/ex005.html
+++ b/exercicios/aula07/ex005.html
@@ -17,10 +17,15 @@
     <h1>Iniciando estudos com DOM</h1>
     <p>Aqui vai o resultado</p>
     <p>Aprendendo a usar <strong>DOM</strong> em javascript</p>
-    <div id="msg">Clique em mim</div>
+    <div class="msg">Clique em mim</div>
     <script>
-        var p1 = window.document.getElementsByTagName('p')[1]
-        document.write(p1.innerHTML)
+        /*
+        var d = document.getElementsByClassName('msg')[0]
+        d.innerHTML = 'Olá'
+        document.write(d.innerHTML) */
+        var d = document.querySelector('div.msg')
+        d.style.backgroundColor = 'black'
+        
     </script>
 </body>
 </html>
