--- a/exercicios/d03/modelo.html
+++ b/exercicios/d03/modelo.html
@@ -24,7 +24,7 @@
                     </select>
                </p>
                 <p>
-                    <input type="button" id="botao" value="Finalizar">
+                    <input type="button" id="botao2" value="Finalizar">
                 </p>
 
             </form>
